# cyber_engine

./: .env.example  .gitignore  LICENSE  README.md  config.py  debug_tools.py  event_log.py  main.py  model.py  pyproject.toml  requirements.txt  start_main_server.py  start_ua_server.py  start_vdb_server.py
api/: __init__.py  client_list.py  connection_manager.py  endpoints.py  message_handler.py  scheduler.py  websocket_client.py  ws_utils.py
docs/: README.md  api.md  architecture.md  tag.md
docs/clients/: cyber-openai.md  cyber-qbot.md
engine_core/: __init__.py  command.py  core.py  hmdb.py  hmq.py  utils.py  vdb_api.py
engine_core/FCAgent/: agent.py  prompt.py
engine_core/agent/: __init__.py
engine_core/agent_core/: AgentBase.py  (+4 more)
kb_sdk/: sdk.py  utilities.py
mcp_sdk/: client.py
mcp_server/: server_run.py
mcp_tools/: client_demo.py
models/: ChatCompletionRequest.py  ServerException.py  TaskEntity.py  __init__.py  _model.py
rag_core/: api_kdb.py  core.py
redis_mq/: __init__.py  redis_abs.py  redis_sqlite.py  redis_sqlite_sync.py
redis_ntr/: __init__.py  redis_abs.py  redis_sqlite.py  redis_sqlite_sync.py
test/: a_test_vdb.py  benchmark_vdb.py  test_core.py  test_event_log.py  test_mq.py  test_sendmail.py  test_vdb_api.py  test_vdb_core.py
useraudit/: __init__.py  api.py  ext.py  snowflake.py  userdb.py
utils/: debug_tools.py  event_log.py
vector_db/: __init__.py  api_mnemonic.py  core.py  model.py
websocket/: __init__.py  connection_manager.py  handle_message.py  message_handler.py  scheduler.py  ws_clients.py  ws_utils.py
(+45 files in other folders)
